--- a/Statistics for cofetariacollage.ro (2013-12) - main.htm
+++ b/Statistics for cofetariacollage.ro (2013-12) - main.htm
@@ -6,16 +6,4 @@
 
 <meta http-equiv="description" content="Awstats - Advanced Web Statistics for cofetariacollage.ro (2013-12) - main">
 <title>Statistics for cofetariacollage.ro (2013-12) - main</title>
-</head>
-
-<frameset cols="240,*">
-<frame name="mainleft" src="./Statistics for cofetariacollage.ro (2013-12) - main_files/awstats.htm" noresize="noresize" frameborder="0">
-<frame name="mainright" src="./Statistics for cofetariacollage.ro (2013-12) - main_files/awstats(1).htm" noresize="noresize" scrolling="yes" frameborder="0">
-<noframes>&lt;body&gt;Your browser does not support frames.&lt;br /&gt;
-You must set AWStats UseFramesWhenCGI parameter to 0
-to see your reports.&lt;br /&gt;
-&lt;/body&gt;</noframes>
-</frameset>
-
-
-</html>
+</head
